tdf#109858: Override default point label placement setting...

with series label placement setting if available while
importing xlsx chart.

Adds unit test in chart2import.cxx that asserts one of
the point label setting in the bugzilla xlsx document.

Change-Id: I8bc04fd569f94a19633666ffdc51b61ac719e8a9