chart2/qa/extras/chart2import.cxx
@@ -94,6 +94,7 @@ public:
     void testAxisTitleRotationXLSX();
 
     void testTdf90510(); // Pie chart label placement settings(XLS)
+    void testTdf109858(); // Pie chart label placement settings(XLSX)
 
     void testInternalDataProvider();
 
@@ -150,6 +151,7 @@ public:
     CPPUNIT_TEST(testSecondaryAxisTitleDefaultRotationXLSX);
     CPPUNIT_TEST(testAxisTitleRotationXLSX);
     CPPUNIT_TEST(testTdf90510);
+    CPPUNIT_TEST(testTdf109858);
 
     CPPUNIT_TEST(testInternalDataProvider);
 
@@ -1252,6 +1254,19 @@ void Chart2ImportTest::testInternalDataProvider() {
 void Chart2ImportTest::testTdf90510()
 {
     load("/chart2/qa/extras/data/xls/", "piechart_outside.xls");
+    uno::Reference< chart::XChartDocument > xChart1Doc( getChartCompFromSheet( 0, mxComponent ), UNO_QUERY_THROW );
+    CPPUNIT_ASSERT_MESSAGE( "failed to load chart", xChart1Doc.is() );
+    Reference<beans::XPropertySet> xPropSet( xChart1Doc->getDiagram()->getDataPointProperties( 0, 0 ), uno::UNO_QUERY_THROW );
+    uno::Any aAny = xPropSet->getPropertyValue( "LabelPlacement" );
+    CPPUNIT_ASSERT( aAny.hasValue() );
+    sal_Int32 nLabelPlacement = 0;
+    CPPUNIT_ASSERT( aAny >>= nLabelPlacement );
+    CPPUNIT_ASSERT_EQUAL_MESSAGE( "Data labels should be placed outside", chart::DataLabelPlacement::OUTSIDE, nLabelPlacement );
+}
+
+void Chart2ImportTest::testTdf109858()
+{
+    load("/chart2/qa/extras/data/xlsx/", "piechart_outside.xlsx");
     uno::Reference< chart::XChartDocument > xChart1Doc( getChartCompFromSheet( 0, mxComponent ), UNO_QUERY_THROW );
     CPPUNIT_ASSERT_MESSAGE( "failed to load chart", xChart1Doc.is() );
     Reference<beans::XPropertySet> xPropSet( xChart1Doc->getDiagram()->getDataPointProperties( 0, 0 ), uno::UNO_QUERY_THROW );
